--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度"/>
       <img class="img-title" src="images/LP-title.gif"/>
       <form method="get">
-        <legend>电弧长度估算:</legend>
+        <legend>电弧长度估算:</legend><br/>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
           <!-- L -->
