--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度"/>
       <img class="img-title" src="images/LP-title.gif"/>
       <form method="get">
-        <legend>电弧长度估算:</legend><br/>
+        <legend>电弧长度估算:</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
           <!-- L -->
-          <label>电弧长度 (L):</label>
+          <label>电弧长度 (L):</label><br/>
           <input type="number" value="53" class="length"/>
           <span class="form-span">英寸</span>
           <br/>
