--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <!--css-->
   <link href="css/my.css" rel="stylesheet" type="text/css"/>
   <!--js-->
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/jq-animate.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
   <script type="text/javascript" src="js/my.js"></script>
   <script type="text/javascript" src="js/pic.js"></script>
   <!-- Icon -->
@@ -19,7 +18,6 @@
 </head>
 
 <body>
-  <div class="open-gpu"></div>
   <!-- menu -->
   <div class ="title">
     <h1>特斯拉线圈设计器</h1>
@@ -44,7 +42,7 @@
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
           <!-- L -->
-          <label>电弧长度 (L):</label><br/>
+          <label>电弧长度 (L):</label>
           <input type="number" value="53" class="length"/>
           <span class="form-span">英寸</span>
           <br/>
