Revert "jquery-down"
This reverts commit a4b348993b4fa89d5a25827bc180197222765186.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <!--css-->
   <link href="css/my.css" rel="stylesheet" type="text/css"/>
   <!--js-->
-  <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/jq-animate.js"></script>
   <script type="text/javascript" src="js/my.js"></script>
   <script type="text/javascript" src="js/pic.js"></script>
   <!-- Icon -->
@@ -18,6 +19,7 @@
 </head>
 
 <body>
+  <div class="open-gpu"></div>
   <!-- menu -->
   <div class ="title">
     <h1>特斯拉线圈设计器</h1>
@@ -42,7 +44,7 @@
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
           <!-- L -->
-          <label>电弧长度 (L):</label>
+          <label>电弧长度 (L):</label><br/>
           <input type="number" value="53" class="length"/>
           <span class="form-span">英寸</span>
           <br/>
