--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="tesla coil caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
+  <meta name="description" content="改进版特斯拉线圈设计器"/>
   <!--主题色-->
   <meta name="theme-color" content="#1565C0"/>
   <!--css-->
@@ -18,7 +20,6 @@
 </head>
 
 <body>
-  <div class="open-gpu"></div>
   <!-- menu -->
   <div class ="title">
     <h1>特斯拉线圈设计器</h1>
@@ -39,6 +40,7 @@
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度"/>
       <img class="img-title" src="images/LP-title.gif"/>
       <form method="get">
+      <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>电弧长度估算:</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
@@ -60,10 +62,12 @@
       <img src="images/ZC.png" alt="电容组和变压器匹配"/>
       <img class="img-title" src="images/ZC-title.png"/>
       <form method="get" name="capmatchcalc">
+      <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>电容组与变压器匹配:</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
           <!-- radio -->
+          <!--[if IE 8]><div class="ie8-small"></div><![endif]-->
           <div class="label">电源频率（FL）:</div>
           <label class="radio">
             <input type="radio" name="radios" name="units" value="50" checked/>
@@ -105,6 +109,7 @@
       <img src="images/LC.png" alt="LC振荡电路频率"/>
       <img class="img-title" src="images/LC-title.png"/>
       <form method="get">
+      <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>LC谐振电路频率计算:</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
@@ -132,6 +137,7 @@
     <div class="card NC">
       <img src="images/NC.png" alt="电容阵列"/>
       <form method="get">
+      <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>电容组设计:</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
@@ -175,6 +181,7 @@
       <img src="images/CC.png" alt="平板电容"/>
       <img class="img-title" src="images/CC-title.png"/>
       <form method="get">
+      <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>平板电容器计算:</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
@@ -222,6 +229,7 @@
     <div class="card FO">
       <img src="images/ufo.jpg" alt="数据表"/>
       <form method="get">
+      <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>相关数据表</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle"></div>
