--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="tesla coil caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
   <meta name="description" content="改进版特斯拉线圈设计器"/>
+  <meta name="robots" content="all">
   <!--主题色-->
   <meta name="theme-color" content="#1565C0"/>
   <!--css-->
@@ -37,7 +38,7 @@
   <div class="home">
     <!-- LP计算模块 -->
     <div class="card LP">
-      <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度"/>
+      <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度" title="电弧长度" />
       <img class="img-title" src="images/LP-title.gif"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
@@ -59,7 +60,7 @@
 
     <!-- ZC计算模块 -->
     <div class="card ZC">
-      <img src="images/ZC.png" alt="电容组和变压器匹配"/>
+      <img src="images/ZC.png" alt="电容组和变压器匹配" title="电容组和变压器匹配" />
       <img class="img-title" src="images/ZC-title.png"/>
       <form method="get" name="capmatchcalc">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
@@ -106,7 +107,7 @@
 
     <!-- LC计算模块 -->
     <div class="card LC">
-      <img src="images/LC.png" alt="LC振荡电路频率"/>
+      <img src="images/LC.png" alt="LC振荡电路频率" title="LC振荡电路频率" />
       <img class="img-title" src="images/LC-title.png"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
@@ -135,7 +136,7 @@
 
     <!-- NC计算模块 -->
     <div class="card NC">
-      <img src="images/NC.png" alt="电容阵列"/>
+      <img src="images/NC.png" alt="电容阵列" title="电容阵列"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>电容组设计:</legend>
@@ -178,7 +179,7 @@
 
     <!-- CC计算模块 -->
     <div class="card CC">
-      <img src="images/CC.png" alt="平板电容"/>
+      <img src="images/CC.png" alt="平板电容" title="平板电容"/>
       <img class="img-title" src="images/CC-title.png"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
@@ -227,7 +228,7 @@
 
     <!-- 数据表 -->
     <div class="card FO">
-      <img src="images/ufo.jpg" alt="数据表"/>
+      <img src="images/ufo.jpg" alt="数据表" title="数据表"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>相关数据表</legend>
