--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <meta name="keywords" content="tesla coil caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
   <meta name="description" content="改进版特斯拉线圈设计器"/>
   <meta name="robots" content="all">
+  <!--百度统计-->
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+    var hm = document.createElement("script");
+    hm.src = "//hm.baidu.com/hm.js?975fbdddb3cbaa27610569dd3dd7d20a";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
   <!--主题色-->
   <meta name="theme-color" content="#1565C0"/>
   <!--css-->
