--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
   <meta name="keywords" content="tesla coil caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
   <meta name="description" content="改进版特斯拉线圈设计器"/>
   <meta name="robots" content="all">
-  <!--百度统计-->
-  <script>
-    var _hmt = _hmt || [];
-    (function() {
-    var hm = document.createElement("script");
-    hm.src = "//hm.baidu.com/hm.js?975fbdddb3cbaa27610569dd3dd7d20a";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-  })();
-  </script>
   <!--主题色-->
   <meta name="theme-color" content="#1565C0"/>
   <!--css-->
@@ -35,14 +25,14 @@
   <div class ="title">
     <h1>特斯拉线圈设计器</h1>
   </div>
-  <ul class="menu">
+  <!-- <ul class="menu">
     <li>
-      <a href="#">首页</a>
+      <a href="#"></a>
     </li>
     <li>
-      <a href="#">关于</a>
+      <a href="#"></a>
     </li>
-  </ul>
+  </ul> -->
 
   <!-- home content -->
   <div class="home">
@@ -205,6 +195,7 @@
           <br/>
           <!-- 电介质材料 -->
           <label>电介质材料:</label>
+          <!--========= select需改进！！！！！ ===========-->
           <select class="DC">
             <option selected="" value="2.3">LDPE/HDPE</option>
             <option value="7.5">Glass</option>
@@ -249,7 +240,7 @@
   </div>
 
   <!-- about-content -->
-  <div class="about">zzz</div>
+  <!-- <div class="about">zzz</div> -->
 </body>
 
 </html>
