--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
 
 <body>
   <!-- menu -->
+  <div class="menu">
+    
+  </div>
   <div class ="title">
     <h1>特斯拉线圈设计器</h1>
   </div>
-  <!-- <ul class="menu">
-    <li>
-      <a href="#"></a>
-    </li>
-    <li>
-      <a href="#"></a>
-    </li>
-  </ul> -->
+  
 
   <!-- home content -->
   <div class="home">
