--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html manifest="test.appcache">
+<html manifest="tcCalc.appcache">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width", initial-scale="1" user-scalable="no">
+  <meta name="viewport" content="width=device-width" initial-scale="1" user-scalable="no">
   <meta name="keywords" content="tesla coil caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
   <meta name="description" content="改进版特斯拉线圈设计器"/>
   <meta name="robots" content="all">
@@ -25,11 +25,11 @@
   <div class="top">
     <img src="images/more-vert-ic.png" id="moreIc"/>
     <ul id="moreList">
-      <li><a href="#">setting</a></li>
-      <li><a href="#">about</a></li>
-      <li><a href="#">help</a></li>
+      <li><a href="#">设置</a></li>
+      <li><a href="#">关于</a></li>
+      <li><a href="#">帮助</a></li>
     </ul>
-    <div class=""><!-- 遮罩 --></div>
+    <div class="blankkk" id="blank"><!-- 遮罩 --></div>
     <h1>特斯拉线圈设计器</h1>
   </div>
   <div class="top-bg"></div>
