--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li><a href="#">关于</a></li>
       <li><a href="#">帮助</a></li>
     </ul>
-    <div class="blankkk" id="blank"><!-- 遮罩 --></div>
+    <div class="blank" id="blank"><!-- 遮罩 --></div>
     <h1>特斯拉线圈设计器</h1>
   </div>
   <div class="top-bg"></div>
