自适应优化等

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html manifest="tcCalc.appcache">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width" initial-scale="1" user-scalable="no">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
   <meta name="keywords" content="tesla coil,tesla caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
   <meta name="description" content="改进版特斯拉线圈设计器"/>
   <meta name="robots" content="all">
@@ -28,13 +28,13 @@
     <img src="images/more-vert-ic.png" id="moreIc"/>    
     <ul id="moreList">
       <li>
-        <a href="#">设置</a>
+        <div id="setting">设置</div>
       </li>
       <li>
-        <a href="#">关于</a>
+        <div id="about">关于</div>
       </li>
       <li>
-        <a href="#">帮助</a>
+        <div id="help">帮助</div>
       </li>
     </ul>
     <div class="blank" id="blank">
