--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html manifest="tcCalc.appcache">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
   <meta name="keywords" content="tesla coil,tesla caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
   <meta name="description" content="改进版特斯拉线圈设计器"/>
-  <meta name="robots" content="all">
+  <meta name="robots" content="all"/>
   <!--主题色-->
   <meta name="theme-color" content="#1565C0"/>
   <!--css-->
@@ -23,7 +23,7 @@
 <body>
   <!-- menu -->
   <div class="top">
-    <img src="images/back-ic.png" id="back" alt="返回"/>    
+    <img src="images/back-ic.png" id="back" alt="返回"/>
     <h1>特斯拉线圈设计器</h1>
     <img src="images/more-vert-ic.png" id="moreIc"/>    
     <ul id="moreList">
