--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script src="js/jquery.js"></script>
   <script src="js/my.js"></script>
   <script src="js/pic.js"></script>
+  
+
   <!-- Icon -->
   <link rel="icon" type="image/x-icon" href="images/Icon.png"/>
   <!-- tittle -->
@@ -36,6 +38,9 @@
       <li>
         <div id="help">帮助</div>
       </li>
+      <li>
+        <div id="QA">评论</div>
+      </li>
     </ul>
     <div class="blank" id="blank">
       <!-- 遮罩 --> </div>
@@ -44,6 +49,8 @@
   
   <!-- home content -->
   <div class="home">
+
+  <div id="SOHUCS"></div>
     <!-- LP计算模块 -->
     <div class="card LP">
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度" title="电弧长度" />
