--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   <script src="js/jquery.js"></script>
   <script src="js/my.js"></script>
   <script src="js/pic.js"></script>
-  
-
   <!-- Icon -->
   <link rel="icon" type="image/x-icon" href="images/Icon.png"/>
   <!-- tittle -->
@@ -39,7 +37,7 @@
         <div id="help">帮助</div>
       </li>
       <li>
-        <div id="QA">评论</div>
+        <div id="QA">评论区</div>
       </li>
     </ul>
     <div class="blank" id="blank">
@@ -51,6 +49,7 @@
   <div class="home">
 
   <div id="SOHUCS"></div>
+
     <!-- LP计算模块 -->
     <div class="card LP">
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度" title="电弧长度" />
