--- a/index.html
+++ b/index.html
@@ -48,8 +48,18 @@
 
 <body>
   <!-- 初始化遮罩 -->
-  <div class="bg" style="position: absolute; height: 100%; width: 100%; z-index: 999; background-color: #eee"></div>
-  <div class ="spinner" style="position:absolute; left: 40%; top:30%; z-index: 1000; width: 60px; height: 60px; margin: 60px; animation: rotate 1.4s infinite ease-in-out, background 1.4s infinite ease-in-out alternate;"></div>
+  <div id="bg" style="position: fixed; height: 100%; width: 100%; z-index: 999; background-color: #eee"></div>
+  <div id ="spinner" style="position:fixed; left: 20%; top:10%; z-index: 1000; width: 60px; height: 60px; margin: 0px; animation: rotate 1.4s infinite ease-in-out, background 1.4s infinite ease-in-out alternate;"></div>
+  
+  <!-- centerJs -->
+  <script>
+    var w=window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+    document.getElementById("spinner").style.left = (w-60)/2 +"px";
+
+    var h=window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+    document.getElementById("spinner").style.top = (h-60)/2 +"px";
+  </script>
+
   <!-- menu -->
   <div class="top">
     <img src="images/back-ic.png" id="back" alt="返回"/>
@@ -73,9 +83,6 @@
   
   <!-- home content -->
   <div class="home">
-
-  <div id="SOHUCS"></div>
-
     <!-- LP计算模块 -->
     <div class="card LP">
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度" title="电弧长度" />
