--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <span class="form-span">英寸</span>
           <br/>
           <!-- P -->
-          <label>电源功率 (P):</label>
+          <label>电源功率 (P):</label><br/>
           <input type="number" value="1000" class="power"/>
           <span class="form-span">瓦特</span>
         </div>
