--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="tcCalc.appcache">
+<html>
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
@@ -64,7 +64,7 @@
   <div class="top">
     <img src="images/back-ic.png" id="back" alt="返回"/>
     <h1>特斯拉线圈设计器</h1>
-    <img src="images/more-vert-ic.png" id="moreIc"/>    
+    <img src="images/more-vert-ic.png" id="moreIc" alt="选项"/>    
     <ul id="moreList">
       <li>
         <div id="setting">设置</div>
