--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="tcCalc.appcache">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
@@ -7,7 +7,7 @@
   <meta name="description" content="改进版特斯拉线圈设计器"/>
   <meta name="robots" content="all"/>
   <!--主题色-->
-  <meta name="theme-color" content="#1565C0"/>
+  <meta name="theme-color" content="#1565C0" class="themecolor"/>
   <!--css-->
   <link href="css/my.css" rel="stylesheet"/>
   <style type="text/css">
@@ -65,7 +65,7 @@
     <img src="images/back-ic.png" id="back" alt="返回"/>
     <h1>特斯拉线圈设计器</h1>
     <img src="images/more-vert-ic.png" id="moreIc" alt="选项"/>    
-    <ul id="moreList">
+	<ul id="moreList">
       <li>
         <div id="setting">设置</div>
       </li>
