add custom themeColor setting

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     <img src="images/more-vert-ic.png" id="moreIc" alt="选项"/>    
 	<ul id="moreList">
       <li>
-        <div id="setting">设置</div>
+        <div id="settingLi">设置</div>
       </li>
       <li>
-        <div id="about">关于</div>
+        <div id="aboutLi">关于</div>
       </li>
       <li>
-        <div id="help">帮助</div>
+        <div id="helpLi">帮助</div>
       </li>
     </ul>
     <div class="blank" id="blank">
@@ -286,6 +286,31 @@
     </div>
   </div>
 
+  <div class="setting">
+    <div id="themeColorLi">
+      <img src="images/color-ic.png" class="settingIc ic" />  
+      <div>
+        <p>修改状态栏颜色(实验性)</p><br/>
+        <div class="p2">修改 theme-color，仅对chrome有效</div>
+        <input value="#1565C0" id="themeColor"/>
+      </div>
+    </div>
+    <div class="">
+      <div></div>
+    </div>
+    <div class="">
+      <div></div>
+    </div>
+    <div class="">
+      <div></div>
+    </div>
+    <div class="">
+      <div></div>
+    </div>
+    <div class="">
+      <div></div>
+    </div>
+  </div>
 </body>
 
 </html>
