add mare head code ，set

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0,initial-scale=1,user-scalable=no">
+  <!-- seo -->
   <meta name="keywords" content="tesla coil,tesla caculater, 特斯拉线圈, 特斯拉线圈设计器"/>
   <meta name="description" content="改进版特斯拉线圈设计器"/>
   <meta name="robots" content="all"/>
+  <meta name="author" content="usb, usbfly@gmail.com"/>
+  <!-- 针对手持设备优化 -->
+  <meta name="HandheldFriendly" content="true">
+  <!-- web app相关 -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="x5-page-mode" content="app">
+  <meta name="browsermode" content="application"/>
   <!--主题色-->
   <meta name="theme-color" content="#1565C0" class="themecolor"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <!--css-->
   <link href="css/my.css" rel="stylesheet"/>
   <style type="text/css">
@@ -23,7 +32,7 @@
      }
      body{height:100%; overflow:hidden;}
   </style>
-  <!--js-->
+  <!-- js -->
   <script src="js/jquery.js" defer></script>
   <script src="js/my.js" defer></script>
   <script src="js/pic.js" defer></script>
@@ -288,7 +297,7 @@
 	  <div>
 	    <p class="">强调色</p><br/>
 		<div class="p2">主题强调色，默认为#f08b3b</div>
-	    <input value="#1565C0" id="secondColor"/>
+	    <input value="#f08b3b" id="secondColor"/>
 	  </div>
     </div>
     <div class="">
@@ -300,21 +309,19 @@
   </div>
   
   <div class="setting" id="set2">
-	<h2 class="settingTittle">外观</h2>
+	<h2 class="settingTittle">高级</h2>
     <div id="themeColorLi">
       <img src="images/color-ic.png" class="settingIc ic" />  
       <div>
-        <p class="">主色调</p><br/>
-        <div class="p2">asdxc</div>
-        <input value="#1565C0" id="themeColor"/>
+        <p class="">###</p><br/>
+        <div class="p2">###</div>
       </div>
     </div>
     <div class="">
       <img src="images/color-ic.png" class="settingIc ic" style="opacity:0.4;filter:alpha(opacity=40)"/>  
 	  <div>
-	    <p class="nop2">强调色</p><br/>
+	    <p class="nop2">###</p><br/>
 		<p class="p2"></p>
-	    <input value="#1565C0" id="secondColor"/>
 	  </div>
     </div>
     <div class="">
